Added additional label

--- a/Games/CoinToss/src/app/toss/toss.component.html
+++ b/Games/CoinToss/src/app/toss/toss.component.html
@@ -1,3 +1,5 @@
+<label>CoinToss</label>
+<br />
 <label>{{result}}</label>
 <br />
 <img alt="coin" title="coin" id="coin-main" src='{{"./../../assets/" + image}}' [ngClass]="runAnimation ? 'coin-touched' : 'coin-untouched'"  (click)="toss()" />
