--- a/Games/CoinToss/src/app/toss/toss.component.html
+++ b/Games/CoinToss/src/app/toss/toss.component.html
@@ -3,3 +3,5 @@
 <label>{{result}}</label>
 <br />
 <img alt="coin" title="coin" id="coin-main" src='{{"./../../assets/" + image}}' [ngClass]="runAnimation ? 'coin-touched' : 'coin-untouched'"  (click)="toss()" />
+<br />
+<label>Done 20 July</label>
